# crypto-flow

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/skills/qt6-dev/: SKILL.md
.github/workflows/: build.yml
display/: compose.sh  record.sh  record_single.sh  script.md  subtitles.srt
docs/: CryptoFlow_实验报告.docx  generate_report.py
docs/plans/: 2026-05-12-cryptoflow-design.md  2026-05-12-cryptoflow-report.md  2026-05-12-cryptoflow-video-script.md
docs/referances/: qt6-advanced-i18n.md  qt6-official-core.md  qt6-official-getting-started.md  qt6-tutorial-getting-started.md  qt6-tutorial-model-view.md
docs/references/: qt6-advanced-custom-widgets.md  qt6-advanced-memory-management.md  qt6-advanced-performance.md  qt6-advanced-stylesheet-qss.md  qt6-algorithms-datatypes.md  qt6-cmake-getting-started.md  qt6-containers.md  qt6-coordinate-system.md  qt6-meta-object-system.md  qt6-migration-from-qt5.md  qt6-module-bluetooth.md  qt6-module-coap.md  qt6-module-core5compat.md  qt6-module-dbus.md  qt6-module-designer.md  qt6-module-help.md  qt6-module-httpserver.md  qt6-module-location.md  qt6-module-mqtt.md  qt6-module-multimedia.md  qt6-module-networkauth.md  qt6-module-nfc.md  qt6-module-opcua.md  qt6-module-opengl.md  qt6-module-pdf.md  qt6-module-positioning.md  qt6-module-qtconcurrent.md  qt6-module-qtgui.md  qt6-module-qtprintsupport.md  qt6-module-qtwebenginecore.md  qt6-module-qtwebenginequick.md  qt6-module-qtwebenginewidgets.md  qt6-module-qtwebview.md  qt6-module-quick-controls2.md  qt6-module-quick-test.md  qt6-module-quick-widgets.md  qt6-module-quick.md  qt6-module-remoteobjects.md  qt6-module-scxml.md  qt6-module-sensors.md  (+26 more)
reports/: report.tex
resources/: style.qss
src/: controlpanel.cpp  controlpanel.h  main.cpp  mainwindow.cpp  mainwindow.h
src/crypto/: caesar.cpp  caesar.h  rsa.cpp  rsa.h  vigenere.cpp  vigenere.h
src/scenes/: base64scene.cpp  base64scene.h  caesarscene.cpp  caesarscene.h  rsascene.cpp  rsascene.h  vigenerecene.cpp  vigenerecene.h  xorscene.cpp  xorscene.h
(+1 files in other folders)
